<resources>
    <string name="app_name" translatable="false">Novela</string>
    <!--    welcome view-->
    <string name="app_logo">App logo</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <!--    login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password_btn">Forgot password?</string>
    <string name="show_password_btn">Show password</string>
    <string name="hide_password_btn">Hide password</string>
    <!--    register -->
    <string name="name">Name</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="year_of_birth">Year of birth</string>
    <string name="next_btn">Next</string>
    <!--    set password -->
    <string name="set_password">Set password</string>
    <string name="repeat_password">Repeat password</string>
    <!--    TODO: add requirements for safe password -->
    <string name="empty_input_error">This field cannot be empty</string>

    <!--    bottom nav bar -->
    <string name="home_btn">Home</string>
    <string name="search_btn">Search</string>
    <string name="library_btn">My library</string>
    <string name="profile_btn">My profile</string>

    <string name="barcode_scanner_btn">Barcode scanner</string>
    <!--    user profile-->
    <string name="profile_background_image">Profile background image</string>
    <string name="profile_image">Profile image</string>
    <string name="followers_count">"Followers: "</string>
    <string name="following_count">"Following: "</string>
    <string name="follow">Follow</string>
    <string name="profile_username">Profile username</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="dark_mode">Dark mode</string>
    <string name="options">Options</string>

    <!--    data registration-->
    <string name="input_requiered">Required field</string>
    <!--    password registration-->
    <string name="condition1">Minimum 8 characters</string>
    <string name="condition2">Contains an uppercase letter</string>
    <string name="condition3">Contains a number</string>
    <string name="condition4">Contains a special character</string>

    <!--   errors-->
    <string name="emailIsEmptyError">Email cannot be empty</string>
    <string name="passwordIsEmptyError">Password cannot be empty</string>
    <string name="nameIsEmptyError">Name cannot be empty</string>
    <string name="usernameIsEmptyError">Username cannot be empty</string>
    <string name="yearIsEmptyError">Year cannot be empty</string>

    <string name="emailIncorrectFormat">Invalid email format</string>
    <string name="yearIncorrectFormat">Invalid year format</string>

    <string name="logInFailure">Log in failure</string>
    <string name="wrongPasswordOrEmail">Log in failure - wrong email or password</string>
    <!--    etc-->
    <string name="back">Back</string>
    <string name="next">Next</string>

    <!--    welcome fragment-->
    <string name="welcomeUser">Hi %s!</string>
    <string name="add_book_to">Add to</string>
    <string name="book_rating" translatable="false">%f / 5</string>
    <string name="scanner_failure">Something went wrong, try again later</string>
    <string name="authError">Login failure - authentication error</string>
    <string name="loginErrNetwork">Login failure - network error</string>
    <string name="loginErrUnknown">Login failure - unknown error</string>
    <string name="regiserErrAuth">Registration failure - authentication error</string>
    <string name="registerErrNetwork">Registration failure - network error</string>
    <string name="registerErrUnknown">Registration failure - unknown error</string>
    <string name="registerErrUsedEmail">Registration failure - email is already assigned to another account</string>
    <string name="enter_email">Enter your email</string>
    <string name="reset_password_btn">Reset password</string>
    <string name="passResetErrNetwork">Password reset failure - network error</string>
    <string name="passResetErrWrongFormatEmail">Password reset failure - wrong email format</string>
    <string name="passResetErrUnknown">Password reset failure - unknow failure</string>
    <string name="passResetErrAuthErr">Password reset failure - authentication error</string>
    <string name="passResetSuccessSend">If the email is valid, you’ll receive a password reset link shortly</string>
    <string name="bookTitle">Title</string>
    <string name="bookAuthor">Author</string>


</resources>