<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".userServices.registration.RegisterPasswordFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_requirement1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="start"
        android:text="@string/condition1"/>

    <TextView
        android:id="@+id/password_requirement2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="start"
        android:text="@string/condition2"/>

    <TextView
        android:id="@+id/password_requirement3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="start"
        android:text="@string/condition3"/>

    <TextView
        android:id="@+id/password_requirement4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="start"
        android:text="@string/condition4"/>

</LinearLayout>