<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:text="@string/login"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:inputType="text"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="@+id/email_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/email_input_layout"
        app:passwordToggleEnabled="true"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_password_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_password_btn"
        app:layout_constraintEnd_toEndOf="@+id/password_input_layout"
        app:layout_constraintStart_toStartOf="@+id/password_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
        android:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_confirmation_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/login"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_btn"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/arrow_back_24px"
        app:iconTint="?attr/colorOnBackground"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_reset_email_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:text="@string/reset_password_btn"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/email_input_layout"
        app:layout_constraintStart_toStartOf="@+id/email_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/email_input_layout" />

    <FrameLayout
        android:id="@+id/loadingScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88999999"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <com.google.android.material.loadingindicator.LoadingIndicator
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:indicatorSize="60dp"
            app:minHideDelay="1200" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>