<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuSections.userProfileSection.UserProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- TODO: Update blank fragment layout -->
<!--        <ImageView-->
<!--            android:id="@+id/profile_background_img"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="150dp"-->
<!--            android:contentDescription="@string/profile_background_image"-->
<!--            android:scaleType="centerCrop"-->
<!--            android:src="@drawable/background_img_placeholder"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--        TODO: -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/user_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="72dp"
            android:scaleType="centerCrop"
            android:src="@drawable/user_photo_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/user_photo_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.10"
            app:shapeAppearanceOverlay="@style/Widget.Novela_Material3.CircularImageView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/user_photo_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="150dp" />

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/username"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/user_photo"
            app:layout_constraintStart_toEndOf="@+id/user_photo" />


        <TextView
            android:id="@+id/profile_followers_counter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/followers_count"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.702"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_photo" />

        <TextView
            android:id="@+id/profile_following_counter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.30"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/profile_followers_counter_label" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="206dp"
            android:layout_marginEnd="205dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.50121653"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <!--        TODO: change settings icon colour to contrast with the background -->


        <!--        TODO: change settings icon colour to contrast with the background -->
<!--        <com.google.android.material.divider.MaterialDivider-->
<!--            android:id="@+id/div"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="30dp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/recyclerView"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/profile_followers_counter_label" />-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/collectionsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_followers_counter_label" />

        <Button
            android:id="@+id/settings_btn"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/options"
            app:icon="@drawable/more_vert_24px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>